--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -1,5 +1,95 @@
 /*admin custom css*/
 /*=============================================================================================*/
+/*public*/
+body {
+  background-color: #FFF;
+}
+
+ul { padding: 0; }
+ul li { list-style: none; }
+
+.fa-o {
+  text-shadow: -1px 0 #555, 0 1px #555, 1px 0 #555, 0 -1px #555;
+  color: #EEE;
+}
+
+/*=============================================================================================*/
+/*header*/
+header.parent-admin { 
+  background-color: #EEE; 
+  position: relative; 
+  height: 125px; 
+  padding: 10px 20px;
+  color: #777;
+}
+
+header.parent-admin a { color: #777; }
+
+header.parent-admin .logo {
+  padding: 10px 30px 20px 20px;
+  border-right: 1px solid #AAA;
+}
+
+header.parent-admin .header-menu {
+  display: inline-block;
+  position: absolute;
+  right: 0;
+  top: 0;
+  text-align: right;
+  font-size: 20px;
+}
+
+header.parent-admin .header-menu ul { display: block; }
+header.parent-admin .header-menu ul li { 
+  display: inline-block; 
+  padding: 10px;
+}
+
+header.parent-admin .header-menu ul li img { 
+  width: 35px;
+  height: 35px;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  border-radius: 50%;
+}
+
+/*=============================================================================================*/
+/*main*/
+
+main.parent-admin {
+  padding: 30px 20px;
+}
+
+main.parent-admin .left-nav {
+  padding: 0 20px 0 30px;
+}
+
+main.parent-admin .left-nav .list-nav {
+  display: block;
+  background-color: #EEE;
+  padding: 40px;
+  box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.2);
+}
+
+main.parent-admin .left-nav .list-nav a { color: #777; }
+main.parent-admin .left-nav .list-nav ul li { 
+  display: block;
+  padding: 10px 0;
+}
+
+main.parent-admin .top-nav {
+  background-color: #f0ad4e;
+}
+
+main.parent-admin .top-nav ul { display: block; margin: 0; }
+main.parent-admin .top-nav ul li {
+  display: inline-block;
+  padding: 5px 20px;
+}
+main.parent-admin .top-nav a { color: #FFF; }
+
+/*=============================================================================================*/
 /*login*/
 .login-bg {
   background-image: url(../../assets/PICS/LB_FW13_15_2.jpg);
