--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -1,7 +1,6 @@
 /*admin custom css*/
 /*=============================================================================================*/
 /*public*/
-html, body { height: 100%; }
 body {
   background-color: #FFF;
 }
@@ -15,14 +14,13 @@ ul li { list-style: none; }
 }
 
 .content-frame { max-width: 1280px; margin: auto; height: 100%; }
+.full-height { height: 100%; }
+.search-box input{ background-color: #CCC; }
+.search-box button{ border: 1px solid #605B5D; }
 
 /*=============================================================================================*/
 /*header*/
 header.parent-admin { 
-  position: absolute;
-  left: 0;
-  right: 0;
-  z-index: 9;
   background-color: #EEE; 
   height: 125px; 
   padding: 10px 20px;
@@ -69,9 +67,7 @@ main.parent-admin {
   position: relative;
   height: 100%;
   margin: auto;
-  overflow: auto;
   background-color: #FFF;
-  border-top: 125px solid #FFF;
 }
 
 main.parent-admin .left-nav {
@@ -79,7 +75,7 @@ main.parent-admin .left-nav {
   position: absolute;
   left: 0;
   top: 30px;
-  height: 100%;
+  height: 93%;
   min-height: 310px;
 }
 
@@ -108,12 +104,23 @@ main.parent-admin .top-nav ul li {
 }
 
 main.parent-admin .top-nav a { color: #FFF; }
-.main-footer { text-align: center; }
+
+/*main-footer*/
+.main-footer { 
+  text-align: center; 
+  background-color: #FFF;
+  padding: 10px;
+  margin-top: 15px;
+}
 
 /*operation-group*/
 .operation-group .input-group {
   padding: 10px 20px 10px 0;
   line-height: 35px;
+}
+
+.operation-group .input-group:last-child {
+  padding-right: 0;
 }
 
 /*alpha*/
@@ -131,10 +138,20 @@ main.parent-admin .top-nav a { color: #FFF; }
 
 .alpha ul li a { color: #888; }
 
+/*header option*/
+.header-option {
+  display: inline-block;
+  width: 100%;
+  background-color: #FFF;
+}
+
 /*summary group*/
 .summary-group p { margin-bottom: 0 }
 .summary-group .number { font-size: 34px; }
 .summary-group .summary-text { display: inline-block; margin-right: 30px; }
+
+/*ext group*/
+.ext-group { display: inline-block; }
 
 /*pagging-text*/
 .pagging-text { font-size: 11px; display: inline-block; margin-right: 35px; }
@@ -191,12 +208,20 @@ main.parent-admin .top-nav a { color: #FFF; }
 
 
 /* table */
+.table-frame {
+  height: 100%;
+  margin-bottom: 20px;
+}
+
+.table { margin-bottom: 0 }
+
 .table thead { 
   background-color: #CCC; 
   font-weight: normal; 
   border-top: 1.2px solid #111;
 }
 
+.table thead th { border-bottom: none !important; }  
 .table thead th,  
 .table tbody td { 
   font-weight: normal;
@@ -225,7 +250,7 @@ main.parent-admin .top-nav a { color: #FFF; }
 
 /*page size*/
 @media (max-width: 767px) {
-
+  header.parent-admin .header-title h2 { font-size: 100% }
 }
 
 /* extra small to small */
@@ -236,6 +261,66 @@ main.parent-admin .top-nav a { color: #FFF; }
 
   .login-form{ height: 402px; }
   .login-form .left, .login-form .right { height: auto; padding: 50px; }
+
+  /*header parent*/
+  header.parent-admin { height: auto; }
+  header.parent-admin .logo { padding: 10px 20px 10px 0; }
+
+  /*main parent*/
+  main.parent-admin { padding: 5px 20px; }
+
+  /*left nav*/
+  main.parent-admin .left-nav {
+    padding: 0;
+    position: relative;
+    left: 0;
+    top: unset;
+    height: auto;
+    min-height: unset;
+    margin-bottom: 5px;
+  }
+
+  main.parent-admin .left-nav .list-nav {
+    display: block;
+    height: 100%;
+    background-color: #EEE;
+    padding: 10px 25px;
+    box-shadow: none;
+  }
+
+  main.parent-admin .left-nav .list-nav .left-nav-toggle { font-size: 16px; padding-top:5px; }
+  main.parent-admin .left-nav .list-nav ul { display: none; }
+  main.parent-admin .left-nav .list-nav ul li:last-child { padding-bottom: 0px; }
+
+
+  main.parent-admin .left-nav .list-nav h3 { margin: 0 }
+
+  /*top nav*/
+  main.parent-admin .top-nav { overflow: auto; padding: 0; }
+  main.parent-admin .top-nav ul { display: flex; }
+  main.parent-admin .top-nav ul li { white-space: nowrap; padding: 20px; }
+
+  /*operation group*/
+  .operation-group { padding: 0 20px; }
+  .operation-group .operation-button { display: inline-block; }
+
+   /*summary group*/
+  .summary-group { margin: 20px 0; padding: 20px; border-top: 1px solid #CCC; border-bottom: 1px solid #CCC; }
+  .summary-group .summary-text { margin-bottom: 20px; }
+
+  /*alpa*/ 
+  .alpha ul { text-align: left; }
+  .pagging-text {
+      font-size: 13px;
+      text-align: right;
+      padding-right: 20px;
+      display: block; 
+      margin-right: 0; 
+      margin-bottom: 20px;
+  }
+
+  /*ext group*/
+  .ext-group { padding: 0 20px; }
 }
 
 /* small */
@@ -244,9 +329,9 @@ main.parent-admin .top-nav a { color: #FFF; }
 }
 /* medium */
 @media (min-width: 992px) and (max-width: 1199px) {
- 
+  main.parent-admin .left-nav .list-nav ul { display: block; }
 }
 /* large */
 @media (min-width: 1200px) {
- 
+  main.parent-admin .left-nav .list-nav ul { display: block; }
 }
