--- a/assets/css/syncard-inject.css
+++ b/assets/css/syncard-inject.css
@@ -27,6 +27,7 @@ a { color: #333; }
 .syn-plus{margin-top: 25px;}
 .syn-divider{margin: 25px 0;}
 .syn-clear { padding: 0; }
+.syn-nowrap { white-space: nowrap; }
 
 .text-right { text-align: right !important; }
 .text-left {text-align: left !important; }
@@ -102,7 +103,6 @@ a { color: #333; }
 }
 
 
-
 .text-default-color{
   color: #605B5D;
 }
@@ -135,7 +135,75 @@ body .container:first-child {
 
 .div-normalize { padding-left: 33px; padding-right: 33px; }
 
+/* Base for label styling */
+[type="checkbox"]:not(:checked),
+[type="checkbox"]:checked {
+  position: absolute;
+  left: -9999px;
+}
+[type="checkbox"]:not(:checked) + label,
+[type="checkbox"]:checked + label {
+  position: relative;
+  cursor: pointer;
+  width: 15px;
+  height: 15px;
+  margin: 0;
+}
 
+/* checkbox aspect */
+[type="checkbox"]:not(:checked) + label:before,
+[type="checkbox"]:checked + label:before {
+  content: '';
+  position: absolute;
+  left: 0; top: 0;
+  width: 15px; height: 15px;
+  border: 2px solid #ccc;
+  background: #fff;
+  box-shadow: inset 0 1px 3px rgba(0,0,0,.1);
+}
+/* checked mark aspect */
+[type="checkbox"]:not(:checked) + label:after,
+[type="checkbox"]:checked + label:after {
+  content: '✔';
+  position: absolute;
+  top: 0; left: 2px;
+  font-size: 1.3em;
+  line-height: 0.8;
+  color: #ec971f;
+  transition: all .2s;
+}
+/* checked mark aspect changes */
+[type="checkbox"]:not(:checked) + label:after {
+  opacity: 0;
+  transform: scale(0);
+}
+[type="checkbox"]:checked + label:after {
+  opacity: 1;
+  transform: scale(1);
+}
+/* disabled checkbox */
+[type="checkbox"]:disabled:not(:checked) + label:before,
+[type="checkbox"]:disabled:checked + label:before {
+  box-shadow: none;
+  border-color: #bbb;
+  background-color: #ddd;
+}
+[type="checkbox"]:disabled:checked + label:after {
+  color: #999;
+}
+[type="checkbox"]:disabled + label {
+  color: #aaa;
+}
+/* accessibility */
+[type="checkbox"]:checked:focus + label:before,
+[type="checkbox"]:not(:checked):focus + label:before {
+  border: 2px solid #ec971f;
+}
+
+/* hover style just for information */
+label:hover:before {
+  border: 2px solid #4778d9!important;
+}
 
 /*=============================================================================================*/
 /* HEADER */
