--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -1,6 +1,7 @@
 /*admin custom css*/
 /*=============================================================================================*/
 /*public*/
+html, body { height: 100% }
 body {
   background-color: #FFF;
 }
@@ -75,13 +76,13 @@ main.parent-admin .left-nav {
   position: absolute;
   left: 0;
   top: 30px;
-  height: 93%;
-  min-height: 310px;
+  height: 100%;
+  min-height: 400px;
 }
 
 main.parent-admin .left-nav .list-nav {
   display: block;
-  height: 100%;
+  height: 93%;
   background-color: #EEE;
   padding: 40px;
   box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.2);
@@ -93,6 +94,8 @@ main.parent-admin .left-nav .list-nav ul li {
   padding: 10px 0;
 }
 
+main.parent-admin .left-nav .list-nav ul li.active { font-weight: bold; }
+
 main.parent-admin .top-nav {
   background-color: #f0ad4e;
 }
@@ -102,6 +105,9 @@ main.parent-admin .top-nav ul li {
   display: inline-block;
   padding: 5px 20px;
 }
+
+main.parent-admin .top-nav ul li.active,
+main.parent-admin .top-nav ul li:hover { background-color: #E68924; }
 
 main.parent-admin .top-nav a { color: #FFF; }
 
@@ -156,6 +162,36 @@ main.parent-admin .top-nav a { color: #FFF; }
 /*pagging-text*/
 .pagging-text { font-size: 11px; display: inline-block; margin-right: 35px; }
 .pagging-text .pagging-left { color: #CCC; }
+
+/*card-menu*/
+.card-menu {
+  display: block;
+  margin: 20px 0;
+}
+
+.card-menu ul li { 
+  display: inline-block;
+  padding: 20px;
+  border: 1px solid #DDD;
+  margin-left: 20px; 
+  min-width: 130px;
+  min-height: 130px;
+}
+
+.card-menu ul li:first-child { margin-left: 0; }
+
+.card-menu ul li span { 
+  display: block;
+  font-size: 45px;
+  text-align: center;
+  margin-bottom: 10px;
+  color: #CCC;
+}
+
+.card-menu ul li a {
+  display: block;
+  text-align: center;
+}
 
 /*=============================================================================================*/
 /*login*/
