--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -357,6 +357,10 @@ main.parent-admin .top-nav a { color: #FFF; }
 
   /*ext group*/
   .ext-group { padding: 0 20px; }
+
+  /*card-menu*/
+  .card-menu ul li:first-child { margin-left: 20px; }
+  .card-menu ul li { margin-bottom: 20px; }
 }
 
 /* small */
