--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -173,12 +173,13 @@ main.parent-admin .top-nav a { color: #FFF; }
   display: inline-block;
   padding: 20px;
   border: 1px solid #DDD;
-  margin-left: 20px; 
+  margin-right: 20px; 
   min-width: 130px;
   min-height: 130px;
+  margin-bottom: 20px;
 }
 
-.card-menu ul li:first-child { margin-left: 0; }
+.card-menu ul li:last-child { margin-right: 0; }
 
 .card-menu ul li span { 
   display: block;
@@ -359,8 +360,7 @@ main.parent-admin .top-nav a { color: #FFF; }
   .ext-group { padding: 0 20px; }
 
   /*card-menu*/
-  .card-menu ul li:first-child { margin-left: 20px; }
-  .card-menu ul li { margin-bottom: 20px; }
+  .card-menu ul li { margin-left: 20px; }
 }
 
 /* small */
