--- a/assets/css/syncard-inject.css
+++ b/assets/css/syncard-inject.css
@@ -53,6 +53,11 @@ a { color: #333; }
   padding-left: 0;
   padding-right: 0;
 }
+.big-image.border,
+.medium-image.border,
+.small-image.border,
+.tiny-image.border { border: 1px solid #CCC; }
+
 .big-image{
   width: 100%;
   height: initial;
