--- a/assets/css/syncard-inject.css
+++ b/assets/css/syncard-inject.css
@@ -112,7 +112,7 @@ a { color: #333; }
   color: #605B5D;
 }
 .fontserif{
-  font-family: serif;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
 .sosmed a { margin-right: 15px; }
