--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -20,10 +20,18 @@ ul li { list-style: none; }
 .search-box button{ border: 1px solid #605B5D; }
 
 /*=============================================================================================*/
+/*bootstrap*/
+.btn.btn-custom {
+  background-color: transparent;
+  padding-left: 0;
+  padding-right: 0;
+}
+
+/*=============================================================================================*/
 /*header*/
-header.parent-admin { 
-  background-color: #EEE; 
-  height: 125px; 
+header.parent-admin {
+  background-color: #EEE;
+  height: 125px;
   padding: 10px 20px;
   color: #777;
   margin: auto;
@@ -46,12 +54,12 @@ header.parent-admin .header-menu {
 }
 
 header.parent-admin .header-menu ul { display: block; }
-header.parent-admin .header-menu ul li { 
-  display: inline-block; 
+header.parent-admin .header-menu ul li {
+  display: inline-block;
   padding: 10px;
 }
 
-header.parent-admin .header-menu ul li img { 
+header.parent-admin .header-menu ul li img {
   width: 35px;
   height: 35px;
   -webkit-border-radius: 50%;
@@ -89,7 +97,7 @@ main.parent-admin .left-nav .list-nav {
 }
 
 main.parent-admin .left-nav .list-nav a { color: #777; }
-main.parent-admin .left-nav .list-nav ul li { 
+main.parent-admin .left-nav .list-nav ul li {
   display: block;
   padding: 10px 0;
 }
@@ -112,8 +120,8 @@ main.parent-admin .top-nav ul li:hover { background-color: #E68924; }
 main.parent-admin .top-nav a { color: #FFF; }
 
 /*main-footer*/
-.main-footer { 
-  text-align: center; 
+.main-footer {
+  text-align: center;
   background-color: #FFF;
   padding: 10px;
   margin-top: 15px;
@@ -155,7 +163,7 @@ main.parent-admin .top-nav a { color: #FFF; }
 .summary-group p { margin-bottom: 0 }
 .summary-group .number { font-size: 34px; }
 .summary-group .summary-text { display: inline-block; margin-right: 30px; }
-.summary-group .summary-text.card { 
+.summary-group .summary-text.card {
   border: 1px solid #CCC;
   padding: 10px;
   margin-bottom: 20px;
@@ -175,11 +183,11 @@ main.parent-admin .top-nav a { color: #FFF; }
   margin: 20px 0;
 }
 
-.card-menu ul li { 
+.card-menu ul li {
   display: inline-block;
   padding: 20px;
   border: 1px solid #DDD;
-  margin-right: 20px; 
+  margin-right: 20px;
   min-width: 130px;
   min-height: 130px;
   margin-bottom: 20px;
@@ -187,7 +195,7 @@ main.parent-admin .top-nav a { color: #FFF; }
 
 .card-menu ul li:last-child { margin-right: 0; }
 
-.card-menu ul li span { 
+.card-menu ul li span {
   display: block;
   font-size: 45px;
   text-align: center;
@@ -258,15 +266,15 @@ main.parent-admin .top-nav a { color: #FFF; }
 
 .table { margin-bottom: 0 }
 
-.table thead { 
-  background-color: #CCC; 
-  font-weight: normal; 
+.table thead {
+  background-color: #CCC;
+  font-weight: normal;
   border-top: 1.2px solid #111;
 }
 
-.table thead th { border-bottom: none !important; }  
-.table thead th,  
-.table tbody td { 
+.table thead th { border-bottom: none !important; }
+.table thead th,
+.table tbody td {
   font-weight: normal;
   border-left: 1px solid #111;
   padding: 2px 15px !important;
@@ -354,14 +362,14 @@ main.parent-admin .top-nav a { color: #FFF; }
   .summary-group { margin: 20px 0; padding: 20px; border-top: 1px solid #CCC; border-bottom: 1px solid #CCC; }
   .summary-group .summary-text { margin-bottom: 20px; }
 
-  /*alpa*/ 
+  /*alpa*/
   .alpha ul { text-align: left; }
   .pagging-text {
       font-size: 13px;
       text-align: right;
       padding-right: 20px;
-      display: block; 
-      margin-right: 0; 
+      display: block;
+      margin-right: 0;
       margin-bottom: 20px;
   }
 
@@ -371,9 +379,9 @@ main.parent-admin .top-nav a { color: #FFF; }
   /*card-menu*/
 
   .card-menu ul li { margin-left: 20px; }
-  
+
   /*summary*/
-  .summary-group .summary-text.card { 
+  .summary-group .summary-text.card {
 	display: inline-block;
 	width: 40%;
   }
@@ -385,7 +393,7 @@ main.parent-admin .top-nav a { color: #FFF; }
 
 /* small */
 @media (min-width: 768px) and (max-width: 991px) {
-  
+
 }
 /* medium */
 @media (min-width: 992px) and (max-width: 1199px) {
