--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -90,7 +90,7 @@ main.parent-admin .left-nav {
 
 main.parent-admin .left-nav .list-nav {
   display: block;
-  height: 93%;
+  /*height: 93%;*/
   background-color: #EEE;
   padding: 40px;
   box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.2);
