--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -14,7 +14,7 @@ ul li { list-style: none; }
   color: #EEE;
 }
 
-.content-frame { max-width: 1280px; margin: auto; height: 100%; }
+.content-frame { margin: auto; height: 100%; }
 .full-height { height: 100%; }
 .search-box input{ background-color: #CCC; }
 .search-box button{ border: 1px solid #605B5D; }
@@ -32,7 +32,7 @@ ul li { list-style: none; }
 header.parent-admin {
   background-color: #EEE;
   height: 125px;
-  padding: 10px 20px;
+  padding: 10px 0;
   color: #777;
   margin: auto;
 }
@@ -47,8 +47,8 @@ header.parent-admin .logo {
 header.parent-admin .header-menu {
   display: inline-block;
   position: absolute;
-  right: 0;
-  top: 0;
+  right: 15px;
+  top: 10px;
   text-align: right;
   font-size: 20px;
 }
@@ -91,9 +91,10 @@ main.parent-admin .left-nav {
 main.parent-admin .left-nav .list-nav {
   display: block;
   /*height: 93%;*/
-  background-color: #EEE;
+  /*background-color: #EEE;*/
   padding: 40px;
-  box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.2);
+  /*box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.2);*/
+  border-right: 1px dashed #CCC;
 }
 
 main.parent-admin .left-nav .list-nav a { color: #777; }
@@ -106,6 +107,7 @@ main.parent-admin .left-nav .list-nav ul li.active { font-weight: bold; }
 
 main.parent-admin .top-nav {
   background-color: #f0ad4e;
+  line-height: 40px;
 }
 
 main.parent-admin .top-nav ul { display: block; margin: 0; }
@@ -161,13 +163,15 @@ main.parent-admin .top-nav a { color: #FFF; }
 
 /*summary group*/
 .summary-group p { margin-bottom: 0 }
-.summary-group .number { font-size: 34px; }
+.summary-group .number { font-size: 70px; }
 .summary-group .summary-text { display: inline-block; margin-right: 30px; }
 .summary-group .summary-text.card {
-  border: 1px solid #CCC;
+  border-top: 1px solid #CCC;
+  border-bottom: 1px solid #CCC;
   padding: 10px;
   margin-bottom: 20px;
-  margin-right: 20px;
+  margin-right: 0px;
+  width: 25%;
 }
 
 /*ext group*/
@@ -188,8 +192,7 @@ main.parent-admin .top-nav a { color: #FFF; }
   padding: 20px;
   border: 1px solid #DDD;
   margin-right: 20px;
-  min-width: 130px;
-  min-height: 130px;
+  width: 22%;
   margin-bottom: 20px;
 }
 
@@ -199,7 +202,7 @@ main.parent-admin .top-nav a { color: #FFF; }
   display: block;
   font-size: 45px;
   text-align: center;
-  margin-bottom: 10px;
+  margin-bottom: 30px;
   color: #CCC;
 }
 
