--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -14,6 +14,7 @@ ul li { list-style: none; }
   color: #EEE;
 }
 
+
 .content-frame { margin: auto; height: 100%; }
 .full-height { height: 100%; }
 .search-box input{ background-color: #CCC; }
@@ -27,6 +28,35 @@ ul li { list-style: none; }
   padding-right: 0;
 }
 
+.select-box { position: relative; }
+.select-box select {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+}
+
+.select-box select {
+    font-family: inherit;
+    border-radius: unset;
+    background-color: transparent;
+    width: 100%;
+    font-size: 12px;
+    color: #000;
+}
+
+.select-box:after {
+    position: absolute;
+    bottom: 13px;
+    right: 10px;
+    width: 0;
+    height: 0;
+    padding: 0;
+    content: '';
+    border-left: 0.4em solid transparent;
+    border-right: 0.4em solid transparent;
+    border-top: 0.4em solid #000;
+    pointer-events: none;
+}
 /*=============================================================================================*/
 /*header*/
 header.parent-admin {
