--- a/assets/css/syncard-inject.css
+++ b/assets/css/syncard-inject.css
@@ -1248,12 +1248,38 @@ img,
   z-index: 2; /* over other stuff */
 }
 
+/**/
+#cart_icon.active { position: relative; }
+#cart_icon.active span { color: orange; }
+#cart_icon.active:after {
+    content: ' ';
+    position: absolute;
+    top: -2px;
+    right: -2px;
+    width: 10px;
+    height: 10px;
+    background-color: #B71C1C;
+    text-align: center;
+    font-size: 8px;
+    z-index: 2;
+    border: 1px solid #E65100;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    border-radius: 50%;
+    -webkit-box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 0px 0px rgba(0,0,0,0.23);
+    -moz-box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 0px 0px rgba(0,0,0,0.23);
+    box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 0px 0px rgba(0,0,0,0.23);
+}
+
 /*=============================================================================================*/
 /*=============================================================================================*/
 /*BOOTSTRAP*/
 .modal-content { border-radius: 0 }
 .modal-header { background-color: #E9E2DB }
 .text-warning { color: #ec971f; }
+.input-group-addon {
+    border-radius: 0 ;
+}
 
 /*=============================================================================================*/
 /*=============================================================================================*/
